--- a/app.ipynb
+++ b/app.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "314c1547",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -147,18 +143,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9efd50d1",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
